# ptbr-sampler

./: README.en.md  README.md  cep_adapter.mjs  cep_api_integration_plan.md  cep_api_integration_plan_corrected.md  cep_api_integration_plan_updated.md  check_output_ddds.py  custom_easy.jsonl  debug.jsonl  debug_city_keys.py  debug_cli_output.py  debug_ddd_issues.py  debug_parse_result_issue.py  debug_phone_flow.py  debug_phone_transmission.py  direct_output.jsonl  fix_ddd_issue.py  fix_easy_ddd.py  fix_phone_ddd.py  fix_plan.md  normalize_population_percentages.py  novo.jsonl  novojkjkjksdsd3.jsonl  package.json  ptbr_sampler.log.all  pyproject.toml  run_cli.py  sample.py  test_all_data.py  test_city_data_access.py  test_ddd.py  test_ddd_fix.py  test_easy_ddd.py  test_final_ddd.py  test_phone_ddd_debug.py  test_phone_out.py  test_phones.jsonl  test_real_world.py  test_save_jsonl.py  test_update.py  (+2 more)
ptbr_sampler/: __init__.py  add_city_name.py  br_location_class.py  br_name_class.py  br_rg_class.py  cli.py  document_sampler.py  examine_data.py  merge_city_data.py  sample1.py  sampler.py  sampler.py.bak  sampler.py.bak2
ptbr_sampler/data/: locations_data_old.bak.json
ptbr_sampler/tests/: cli_text.py  conftest.py  test_location_sampler.py  test_name_sampler.py
ptbr_sampler/utils/: address_for_offline.py  cep_service.js  cep_wrapper.py  cpf.py  phone.py  pis.py  util.py
ptbr_sampler/utils/cep-promise-node/: package.json
src/: __init__.py  add_city_name.py  br_location_class.py  br_name_class.py  cli.py  document_sampler.py  examine_data.py  merge_city_data.py  sample2.py  sampler.py  teste.py
src/data/: locations_data.bak2.json  locations_data.json  middle_names.json
src/tests/: cli_text.py  conftest.py  test_location_sampler.py  test_name_sampler.py
src/utils/: __init__.py  address_for_offline.py  cei.py  cep_wrapper.py  cnpj.py  phone.py
tests/: README.md  conftest.py  test_weighted_distributions.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_br_location_class.py  test_br_name_class.py  test_br_rg_class.py  test_cli.py  test_document_sampler.py  test_sampler.py
tests/unit/utils/: __init__.py  test_cei.py  test_cnpj.py  test_cpf.py  test_phone.py  test_pis.py  test_util.py
